# utsikt-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: deploy.yaml
.nais/: app.yaml
.streamlit/: config.toml
app/: .env  bq_connector.py  data.py  functions.py  main.py  plot_functions.py  test.py
app/queries/: beregninger_fagomrade.sql  beregninger_manuell_ventestatuser.sql  faggruppe.sql  fagomrade.sql  stoppnivaer_manuell_ventestatuser.sql  ventestatus.sql
app/tabs/: beregninger.py  om_dataen.py  ventestatus_manuell.py
