[project]
name = "utsikt-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.34.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.52.2",
]
