[project]
name = "utsikt-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.52.0",
    "google-cloud-bigquery>=3.34.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.57.0",
]

[tool.sqlfluff.core]
dialect = "bigquery"
max_line_length = 0

[dependency-groups]
dev = [
    "sqlfluff>=4.2.0",
]
